Edit Readme.md, styles.css, script.js, index.html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
         <meta charset = "UTF-8">
         <title>Etch-A-Sketch</title>
         <link rel = "stylesheet" href = "styles.css">
-        <script src = "script.js"></script>
+        <script src = "script.js" defer></script>
     </head>
     <body>
-
+        <h1 id = "header"> Etch-A-Sketch!</h1>
+        <div id = "container">
+            <div id = "gridcontainer">
+            </div>
+            <div id = "buttoncontainer">
+                <button id = "resolution">Change Resolution!</button>
+                <button id = "reset">Reset!</button>
+                <button id = "rainbow">Rainbow!</button>
+            </div>
+        </div>
     </body>
 </html>
